Add CosmosDB-specific patterns and optimization strategies to instructions

--- a/src/SignPuddleAPI/.github/instructions/.instructions.md
+++ b/src/SignPuddleAPI/.github/instructions/.instructions.md
@@ -19,6 +19,66 @@ Coding standards, domain knowledge, and preferences that AI should follow.
 - **Test Framework**: xUnit 2.9.0 with 97+ comprehensive tests
 - **Architecture**: Repository pattern with dependency injection
 
+### CosmosDB-Specific Patterns 🗄️
+
+#### Partition Key Strategies
+- **Signs**: Partitioned by `DictionaryId` for efficient dictionary-based queries
+- **SpmlDocuments**: Partitioned by `PartitionKey` (derived from SPML type: "sgn", "ase", etc.)
+- **Dictionaries**: No specific partition key (small dataset)
+- **Users**: No specific partition key (small dataset)
+
+#### Container Configuration
+```csharp
+// Signs - partition by dictionary for related queries
+modelBuilder.Entity<Sign>()
+    .ToContainer("Signs")
+    .HasPartitionKey(s => s.DictionaryId)
+    .HasNoDiscriminator();
+
+// SPML Documents - partition by type for efficient filtering
+modelBuilder.Entity<SpmlDocumentEntity>()
+    .ToContainer("SpmlDocuments")
+    .HasPartitionKey(e => e.PartitionKey)
+    .HasNoDiscriminator();
+
+// Owned entities for complex nested data
+modelBuilder.Entity<SpmlDocumentEntity>()
+    .OwnsOne(e => e.SpmlDocument);
+```
+
+#### Query Optimization Patterns
+- **Cross-partition queries**: Minimize by designing queries within partition boundaries
+- **Point reads**: Use ID + partition key for fastest access
+- **Client evaluation**: For complex owned entity queries, fetch to memory then filter
+- **Async operations**: All database operations use async/await patterns
+
+#### Performance Settings
+```csharp
+options.UseCosmos(
+    accountEndpoint: endpoint,
+    accountKey: key,
+    databaseName: dbName,
+    cosmosOptionsAction: options =>
+    {
+        options.ConnectionMode(ConnectionMode.Direct);      // Direct TCP connection
+        options.MaxRequestsPerTcpConnection(20);           // Connection pooling
+        options.MaxTcpConnectionsPerEndpoint(32);          // Endpoint connections
+    }
+);
+```
+
+#### Consistency Levels
+- **Default**: Session consistency (balanced performance/consistency)
+- **Read operations**: Eventual consistency acceptable for most queries
+- **Write operations**: Strong consistency for critical operations
+- **Cross-region**: Not currently configured (single region deployment)
+
+#### Indexing Strategy
+- **Automatic indexing**: CosmosDB handles most indexing automatically
+- **Custom indexes**: Added for common query patterns (DocumentType, OwnerId)
+- **Composite indexes**: Consider for multi-property filter queries
+- **Exclude unused paths**: Optimize for write performance where appropriate
+
 ---
 
 # AI-Assisted Vibe Coding Development Guide
