Add FSW validation, format conversion, and SPML migration functions with validation requirements

--- a/src/SignPuddleAPI/.github/instructions/.instructions.md
+++ b/src/SignPuddleAPI/.github/instructions/.instructions.md
@@ -297,6 +297,55 @@ VALIDATION REQUIRED:
 ✅ Concurrent operation support maintained
 ```
 
+#### FSW Validation Function
+```
+ROLE: SignWriting domain expert specializing in FSW format validation
+TASK: Implement [FSW_VALIDATION_FUNCTION] for sign language data validation
+INPUT: FSW string, validation requirements, symbol category constraints
+OUTPUT: Micro-function (max 15 lines) + unit tests + real FSW data demo
+CONSTRAINTS: Strict adherence to ISWA 2010 standards, handle malformed FSW gracefully
+CAPABILITIES: FSW regex patterns, coordinate validation, symbol categorization
+
+VALIDATION REQUIRED:
+✅ FSW validation follows ISWA 2010 specifications
+✅ Coordinate range validation (250-749)
+✅ Symbol format validation (S[base][fill][rotation])
+✅ Complete sign structure validation (temporal + spatial)
+```
+
+#### SignWriting Format Conversion
+```
+ROLE: SignWriting format conversion specialist
+TASK: Implement [FORMAT_CONVERSION] between FSW/SWU/SPML formats
+INPUT: Source format string, target format, conversion requirements
+OUTPUT: Conversion function (max 15 lines) + bidirectional tests + format validation
+CONSTRAINTS: Preserve semantic meaning, maintain coordinate precision
+CAPABILITIES: FSW/SWU conversion patterns, SPML XML processing, character mapping
+
+VALIDATION REQUIRED:
+✅ Bidirectional conversion accuracy (FSW ↔ SWU)
+✅ SPML DTD compliance for XML operations
+✅ Coordinate precision preservation
+✅ Symbol integrity across format conversions
+```
+
+#### SPML Legacy Migration Function
+```
+ROLE: SPML import specialist for legacy SignPuddle data migration
+TASK: Implement [SPML_MIGRATION_FUNCTION] for legacy puddle import
+INPUT: SPML XML structure, target database schema, data integrity requirements
+OUTPUT: Migration function (max 15 lines) + integration tests + data validation
+CONSTRAINTS: 100% data preservation, handle incomplete/malformed SPML
+CAPABILITIES: SPML DTD 1.6 schema, Unix timestamp conversion, user attribution
+
+VALIDATION REQUIRED:
+✅ SPML DTD 1.6 compliance validation
+✅ Unix timestamp conversion accuracy
+✅ User attribution preservation
+✅ FSW extraction from SPML terms
+✅ Entry relationship preservation (prev/next links)
+```
+
 ---
 
 ## ✅ Quality Gates
@@ -349,6 +398,42 @@ VALIDATION REQUIRED:
 - [ ] Request/response models properly defined
 - [ ] Authentication/authorization requirements enforced
 - [ ] Swagger documentation complete and accurate
+
+### SignWriting Domain Quality Gates
+
+#### Per FSW Validation Function
+- [ ] Follows ISWA 2010 symbol categorization standards
+- [ ] Validates coordinate ranges (250-749 for X and Y)
+- [ ] Distinguishes temporal prefix from spatial signbox
+- [ ] Provides meaningful error messages for invalid FSW
+
+#### Per Format Conversion Function
+- [ ] Maintains semantic equivalence across format conversions
+- [ ] Handles bidirectional conversion accurately
+- [ ] Validates input format before conversion
+- [ ] Returns appropriate error for unsupported format combinations
+
+#### Per SPML Operation
+- [ ] Complies with SPML DTD 1.6 schema requirements
+- [ ] Preserves element order: (term*,text*,png?,svg?,src*,entry*)
+- [ ] Handles Unix timestamp conversion to UTC DateTime
+- [ ] Extracts FSW notation from term elements correctly
+- [ ] Maintains entry relationships (prev/next navigation)
+- [ ] Preserves user attribution and creation timestamps
+
+#### Per SignWriting Search Function
+- [ ] Supports symbol-based search queries
+- [ ] Handles partial FSW pattern matching
+- [ ] Converts FSW to query format (Q prefix for spatial, QT for temporal)
+- [ ] Indexes searchable symbols for performance
+- [ ] Supports wildcard and category-based searches
+
+#### Per Font Rendering Function
+- [ ] Selects correct font based on symbol fill value
+- [ ] Maps coordinates to canvas positioning accurately
+- [ ] Handles symbol anchor points for proper alignment
+- [ ] Supports all four SignWriting font types (Line, Fill, OneD, Null)
+- [ ] Renders symbols within signbox boundaries
 
 ---
 
@@ -418,3 +503,213 @@ The SignPuddle database implementation is **production-ready** with comprehensiv
 ---
 
 **Key Principle**: Always confirm atomic breakdown before writing any code. Implement one micro-function at a time with complete testing. Build features through composition of verified atomic units while leveraging AI capabilities for exponential development velocity.
+
+---
+
+## SignWriting/Sign Language Domain Knowledge 📝
+
+### SignWriting Technology Overview
+SignWriting is a visual writing system for sign languages invented by Valerie Sutton in 1974. The SignPuddle system supports multiple encoding formats and legacy data migration.
+
+### Core SignWriting Formats
+
+#### 1. FSW (Formal SignWriting) - Primary Format
+**Structure**: `[TemporalPrefix][SpatialSignbox]`
+```
+AS14c20S27106M518x529S14c20481x471S27106503x489
+  ↑temporal prefix    ↑spatial signbox
+```
+
+**Character Set**: Uses ASCII characters: `ABLMRS0123456789xabcdef`
+
+**Key Components**:
+- **Temporal Prefix**: `A` + optional lane markers + symbols with coordinates
+- **Spatial Signbox**: Lane marker + dimensions + symbols with coordinates
+- **Symbols**: `S[Base][Fill][Rotation]` format (e.g., `S1870a`)
+- **Coordinates**: `[X]x[Y]` format with valid range 250-749
+
+#### 2. SWU (SignWriting in Unicode) - Unicode Format
+- Unicode-based representation maintaining FSW semantic structure
+- Character mapping from ASCII to Unicode codepoints
+- Bidirectional conversion with FSW
+
+#### 3. Legacy Formats Supported
+- **KSW (Kolumbus SignWriting)**: Legacy format support
+- **BSW (Binary SignWriting)**: Compact binary format
+- **CSW (Compact SignWriting)**: Space-efficient text format
+
+### FSW Validation Rules
+
+#### Symbol Validation
+```csharp
+// FSW symbol pattern: S + base(3 chars) + fill(1 char) + rotation(1 char)
+public static readonly Regex FSW_SYMBOL = new(@"S[123][0-9a-f]{2}[0-5][0-9a-f]");
+
+// Examples:
+// S14c20 = S + 14c + 2 + 0 (valid)
+// S38b0a = S + 38b + 0 + a (valid)
+```
+
+#### Coordinate Validation
+```csharp
+// Coordinate pattern: 3 digits + x + 3 digits
+public static readonly Regex FSW_COORD = new(@"[0-9]{3}x[0-9]{3}");
+
+// Valid coordinate range: 250-749 for both X and Y
+public static bool IsValidCoordinate(int x, int y) =>
+    x >= 250 && x <= 749 && y >= 250 && y <= 749;
+```
+
+#### Complete FSW Sign Validation
+```csharp
+// Full FSW sign pattern with temporal and spatial components
+public static readonly Regex FSW_SIGN = new(
+    @"(A([BLMRS]([0-9]{3}x[0-9]{3}))?" +
+    @"(S[123][0-9a-f]{2}[0-5][0-9a-f][0-9]{3}x[0-9]{3})*)?)" +
+    @"([BLMRS][0-9]{3}x[0-9]{3}" +
+    @"(S[123][0-9a-f]{2}[0-5][0-9a-f][0-9]{3}x[0-9]{3})+)"
+);
+```
+
+#### Symbol Categories (ISWA 2010)
+```csharp
+// Base symbol ranges for different categories
+public static class SymbolCategories
+{
+    public const string HAND_SYMBOLS = "S100-S1f6"; // Hand shapes
+    public const string MOVEMENT_SYMBOLS = "S200-S2ff"; // Movement arrows
+    public const string DYNAMICS_SYMBOLS = "S300-S36f"; // Movement dynamics
+    public const string HEAD_SYMBOLS = "S370-S37f"; // Head positions
+    public const string FACE_SYMBOLS = "S380-S38f"; // Facial expressions
+    public const string BODY_SYMBOLS = "S390-S3af"; // Body positions
+    public const string PUNCTUATION = "S3b0-S3ff"; // Punctuation marks
+}
+```
+
+### SPML (SignPuddle Markup Language) Format Details
+
+#### SPML DTD Schema Structure (Version 1.6)
+```xml
+<!ELEMENT spml (term*,text*,png?,svg?,src*,entry*)>
+<!ATTLIST spml 
+    root CDATA #IMPLIED
+    type CDATA #IMPLIED        <!-- Language type: "sgn", "ase", etc. -->
+    puddle CDATA #IMPLIED      <!-- Dictionary/puddle ID -->
+    uuid CDATA #IMPLIED        <!-- Unique identifier -->
+    cdt CDATA #IMPLIED         <!-- Creation timestamp (Unix) -->
+    mdt CDATA #IMPLIED         <!-- Modification timestamp (Unix) -->
+    nextid CDATA #IMPLIED      <!-- Next available entry ID -->
+>
+
+<!ELEMENT entry (term*,text*,png?,svg?,video?,src*)>
+<!ATTLIST entry 
+    id CDATA #IMPLIED          <!-- Entry ID -->
+    uuid CDATA #IMPLIED        <!-- Unique identifier -->
+    prev CDATA #IMPLIED        <!-- Previous entry ID -->
+    next CDATA #IMPLIED        <!-- Next entry ID -->
+    cdt CDATA #IMPLIED         <!-- Creation timestamp (Unix) -->
+    mdt CDATA #IMPLIED         <!-- Modification timestamp (Unix) -->
+    usr CDATA #IMPLIED         <!-- User who created/modified -->
+>
+```
+
+#### SPML Element Structure
+```xml
+<!-- Example SPML document structure -->
+<spml type="sgn" puddle="4" uuid="..." cdt="1234567890" mdt="1234567890">
+  <term>AS14c20S27106M518x529S14c20481x471S27106503x489</term>  <!-- FSW notation -->
+  <text>hello</text>                                              <!-- Gloss/meaning -->
+  <entry id="1" usr="admin" cdt="1234567890">
+    <term>AS14c20S27106M518x529S14c20481x471S27106503x489</term>
+    <text>hello</text>
+    <video>video_url_here</video>
+    <src>source_attribution</src>
+  </entry>
+</spml>
+```
+
+#### SPML Data Extraction Patterns
+```csharp
+// Extract FSW notation from SPML terms
+public static string ExtractFSW(SpmlEntry entry)
+{
+    return entry.Terms?.FirstOrDefault(t => t.StartsWith("A") || t.StartsWith("M") || t.StartsWith("L")) ?? "";
+}
+
+// Extract gloss text (non-FSW terms)
+public static string ExtractGloss(SpmlEntry entry)
+{
+    return entry.Terms?.FirstOrDefault(t => !IsFSWNotation(t)) ?? 
+           entry.TextElements?.FirstOrDefault() ?? "";
+}
+
+// Unix timestamp conversion
+public static DateTime ConvertUnixTimestamp(string unixTimestamp)
+{
+    if (long.TryParse(unixTimestamp, out long unix))
+        return DateTimeOffset.FromUnixTimeSeconds(unix).UtcDateTime;
+    return DateTime.UtcNow;
+}
+```
+
+### Domain-Specific Validation Rules
+
+#### Sign Language Linguistic Validation
+```csharp
+// Validate FSW represents a complete sign
+public static bool IsCompleteSign(string fsw)
+{
+    // Must have both temporal (A prefix) and spatial (signbox) components
+    return fsw.StartsWith("A") && 
+           Regex.IsMatch(fsw, @"[BLMRS][0-9]{3}x[0-9]{3}") &&
+           fsw.Contains("S"); // Must contain at least one symbol
+}
+
+// Validate spatial relationships in signbox
+public static bool HasValidSpatialLayout(string fsw)
+{
+    var symbols = ExtractSymbolsWithCoordinates(fsw);
+    var signboxDimensions = ExtractSignboxDimensions(fsw);
+    
+    // All symbols must be within signbox boundaries
+    return symbols.All(s => IsWithinBounds(s.X, s.Y, signboxDimensions));
+}
+
+// Dictionary language type validation
+public static bool IsValidLanguageType(string type)
+{
+    // Common sign language ISO codes
+    var validTypes = new[] { "sgn", "ase", "bsl", "fsl", "dsl", "jsl" };
+    return validTypes.Contains(type?.ToLower());
+}
+```
+
+#### SPML Import Validation
+```csharp
+// Validate SPML document integrity
+public static ValidationResult ValidateSpmlDocument(SpmlDocument document)
+{
+    var errors = new List<string>();
+    
+    // Required fields validation
+    if (string.IsNullOrEmpty(document.Type))
+        errors.Add("SPML type is required");
+    
+    if (document.PuddleId <= 0)
+        errors.Add("Valid puddle ID is required");
+    
+    // Entry validation
+    foreach (var entry in document.Entries ?? Enumerable.Empty<SpmlEntry>())
+    {
+        if (!entry.Terms?.Any() == true)
+            errors.Add($"Entry {entry.Id} has no terms");
+            
+        // Validate FSW if present
+        var fswTerm = entry.Terms?.FirstOrDefault(t => IsFSWNotation(t));
+        if (fswTerm != null && !IsValidFSW(fswTerm))
+            errors.Add($"Entry {entry.Id} has invalid FSW: {fswTerm}");
+    }
+    
+    return new ValidationResult { IsValid = !errors.Any(), Errors = errors };
+}
+```
